--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/png" href="./memoriesLogo.png" />
+    <link rel="icon" type="image/jpg" href="./logo.jpg" />
     <link rrel="preload" href="https://fonts.googleapis.com" />
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin />
     <link
