--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@500&family=Monoton&family=Orbitron&display=swap"
       rel="stylesheet"
     />
-    <title>Memories</title>
+    <title>Photo Book</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
